establish design toolkit

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,9 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
+// Design Toolbox
+@import "design_toolbox/index";
+
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
