--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,10 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
-$blue: #167FFB;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
+$dark-blue: #1A2E3D;
+$blue: #274E58;
+$beige: #FEF0E7;
+$pink: #DDCDCA;
+$blue-gradient: linear-gradient(67.97deg, #234A54 3.78%, #1A2F3E 112.76%);
 $gray: #0E0000;
 $light-gray: #F4F4F4;
