--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -12,10 +12,10 @@ $font-size-base: 1rem;
 // Colors
 $body-color: $gray;
 $primary:    $blue;
-$success:    $green;
-$info:       $yellow;
-$danger:     $red;
-$warning:    $orange;
+$success:    $dark-blue;
+$info:       $beige;
+$danger:     $pink;
+$warning:    $pink;
 
 // Buttons & inputs' radius
 $border-radius:    2px;
