--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -6,11 +6,10 @@ $body-font: "Merriweather Sans", "Helvetica", "sans-serif";
 $headers-font: "Merriweather", "Times", "serif";
 
 // To use a font file (.woff) uncomment following lines
-// @font-face {
-//   font-family: "Font Name";
-//   src: font-url('FontFile.eot');
-//   src: font-url('FontFile.eot?#iefix') format('embedded-opentype'),
-//        font-url('FontFile.woff') format('woff'),
-//        font-url('FontFile.ttf') format('truetype')
-// }
-// $my-font: "Font Name";
+@font-face {
+  font-family: "Maverix";
+  src: font-url('maverix.otf');
+  src: font-url('maverix.otf') format('opentype'),
+       font-url('maverix.ttf') format('truetype');
+}
+$title-font: "Maverix", "Times", "serif";
