move around some variables to better match figma

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -11,9 +11,9 @@ $font-size-base: 1rem;
 
 // Colors
 $body-color: $gray;
-$primary:    $blue;
-$success:    $dark-blue;
-$info:       $beige;
+$primary:    $dark-blue;
+$success:    $beige;
+$info:       $blue;
 $danger:     $pink;
 $warning:    $pink;
 
