update tons of components to match figma

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,8 +3,10 @@
 // For example:
 $dark-blue: #1A2E3D;
 $blue: #274E58;
+$light-blue: #0081A2;
 $beige: #FEF0E7;
 $pink: #DDCDCA;
 $blue-gradient: linear-gradient(67.97deg, #234A54 3.78%, #1A2F3E 112.76%);
 $gray: #0E0000;
-$light-gray: #F4F4F4;
+$light-gray: #D0D0D0;
+$white: white;
