--- a/app/assets/stylesheets/design_toolbox/_title.scss
+++ b/app/assets/stylesheets/design_toolbox/_title.scss
@@ -1,3 +1,7 @@
 .title{
   font-family: $title-font;
+  font-size: 0.8rem;
+  line-height: 1rem;
+  letter-spacing: 0.67em;
+  @extend .color-dark-blue;
 }
