--- a/app/assets/stylesheets/design_toolbox/_color.scss
+++ b/app/assets/stylesheets/design_toolbox/_color.scss
@@ -5,6 +5,9 @@
   &-blue{
     color: $blue;
   }
+  &-light-blue{
+    color: $light-blue;
+  }
   &-beige{
     color: $beige;
   }
@@ -34,6 +37,9 @@
   }
   &-blue{
     background-color: $blue;
+  }
+  &-light-blue{
+    background-color: $light-blue;
   }
   &-beige{
     background-color: $beige;
