continue to design toolkit

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -10,3 +10,4 @@ $blue-gradient: linear-gradient(67.97deg, #234A54 3.78%, #1A2F3E 112.76%);
 $gray: #0E0000;
 $light-gray: #D0D0D0;
 $white: white;
+$placeholder-gray: #bac0c5;
