--- a/app/assets/stylesheets/design_toolbox/_index.scss
+++ b/app/assets/stylesheets/design_toolbox/_index.scss
@@ -2,7 +2,7 @@
 @import "border_radius";
 @import "title";
 @import "color";
-@import "header";
+@import "headers";
 @import "panel";
 @import "border";
 @import "link";
