--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
   <body>
     <%= render 'shared/flashes' %>
     <%= render 'shared/header' %>
-    <%= yield %>
+    <div class="page-wrap">
+      <%= yield %>
+    </div>
     <%= render 'shared/footer' %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
