add open button to navbar

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -23,3 +23,7 @@ $border-radius-lg: 0px;
 $border-radius-sm: 0px;
 
 // Override other variables below!
+
+// Custom heights
+$header-height: 70px; // Factored as a variable for ease of spacing in future
+$footer-height: 96px; // Factored as a variable for ease of spacing in future
