--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,4 +4,11 @@
       <i class="fas fa-bars"></i>
     </a>
   </div>
+  <div id="navbar-menu" class="menu">
+    <div class="close-button">
+      <a href="#" title="Open navigation bar" id="navbar-open-button">
+        <i class="fas fa-times"></i>
+      </a>
+    </div>
+  </div>
 </div>
