--- a/app/assets/stylesheets/design_toolbox/_flex.scss
+++ b/app/assets/stylesheets/design_toolbox/_flex.scss
@@ -4,4 +4,9 @@
     justify-content: center;
     align-items: center;
   }
+  &-left{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+  }
 }
