--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,11 +4,20 @@
       <i class="fas fa-bars"></i>
     </a>
   </div>
-  <div id="navbar-menu" class="menu">
-    <div class="close-button">
-      <a href="#" title="Open navigation bar" id="navbar-open-button">
-        <i class="fas fa-times"></i>
-      </a>
-    </div>
+  <div class="close-button hidden" id="navbar-close">
+    <a href="#" title="Open navigation bar" id="navbar-close-button">
+      <i class="fas fa-times"></i>
+    </a>
+  </div>
+  <div class="menu hidden" id="navbar-menu">
+    <ul class="links">
+      <li><a href="#">Contact</a></li>
+      <li><a href="#">Our Mission</a></li>
+      <li><a href="#">About Us</a></li>
+    </ul>
+    <ul class="social">
+      <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+      <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+    </ul>
   </div>
 </div>
