--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,8 +20,8 @@
       <a href="#" class="button-secondary">Button 2</a>
     </div>
   </div>
-  <div class="panel">
-    <div class="col">
+  <div class="row">
+    <div class="panel">
       <div class="row">
         <div class="col">
           <h1 class="title">Artyque is for Galleries</h1>
