--- a/app/assets/stylesheets/design_toolbox/_panel.scss
+++ b/app/assets/stylesheets/design_toolbox/_panel.scss
@@ -1,7 +1,12 @@
 .panel{
-  @include make-row();
-  @include make-col-ready();
-  @extend .m-3;
+  // A panel is set up with some equivalency to a Bootstrap row, so it should contain columns within. If you want to have rows inside, they should be first 
+  @include make-col(12);
+  @include media-breakpoint-down(xs) {
+    margin: 2.25rem 0 !important;
+    width: calc(100vw - 4.5rem) !important;
+  }
+  @extend .mt-5;
+  @extend .mb-5;
   @extend .p-5;
   @extend .border;
   @extend .shadow-box-dark;
