--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,1 +1,5 @@
-<footer class="footer"></footer>
+<footer class="footer">
+  <div class="image">
+    <%= image_tag 'logo-footer.svg', class: 'logo' %>
+  </div>
+</footer>
