--- a/app/assets/stylesheets/design_toolbox/_scroll.scss
+++ b/app/assets/stylesheets/design_toolbox/_scroll.scss
@@ -1,4 +1,6 @@
 .scroll-disable{
   // Used on body when navbar is opened to prevent scroll
+  height: calc(100vh - #{$header-height});
+  min-height: 0 !important;
   overflow: hidden;
 }
