--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,16 +6,16 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-6">
+    <div class="col-xs-12 col-sm-6">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       <p><a href="#">Lorem ipsum >></a></p>
     </div>
   </div>
   <div class="row">
-    <div class="col-6">
+    <div class="col-xs-12 col-sm-6">
       <input placeholder="Input" />
     </div>
-    <div class="col-6">
+    <div class="col-xs-12 col-sm-6">
       <a href="#" class="button-primary">Button 1</a>
       <a href="#" class="button-secondary">Button 2</a>
     </div>
@@ -29,10 +29,10 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-6">
+        <div class="col-xs-12 col-sm-6">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
-        <div class="col-6">
+        <div class="col-xs-12 col-sm-6">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
       </div>
@@ -42,10 +42,10 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-6">
+        <div class="col-xs-12 col-sm-6">
           <input placeholder="Input" />
         </div>
-        <div class="col-6">
+        <div class="col-xs-12 col-sm-6">
           <a href="#" class="button-primary">Button 1</a>
         </div>
       </div>
