--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -52,6 +52,8 @@
     </div>
   </div>
   <div class="row">
-    <%= render 'contact_forms/new' %>
+    <div class="col">
+      <%= render 'contact_forms/new' %>
+    </div>
   </div>
 </div>
