--- a/app/assets/stylesheets/design_toolbox/_border.scss
+++ b/app/assets/stylesheets/design_toolbox/_border.scss
@@ -1,5 +1,5 @@
 .border{
-  border: 1px solid #EFEFEF;
+  border: 1px solid #EFEFEF !important;
   &-light-blue{
     border: 1px solid $light-blue !important;
   }
