--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,4 +1,63 @@
 .wrapper-banner {
-	padding: 85px 67px 0;
-	background: $pink;
+	background: $beige;
+	.banner-content{
+		@include make-container;
+		@include media-breakpoint-up(sm) {
+			width: calc(100vw - 2 * #{$header-height});
+			margin: 0 auto;
+		}
+	}
+	.inner-banner {
+		height: 100vh;
+		@include media-breakpoint-up(sm) {
+		    height: 80vh;
+		}
+
+	}
+	.banner-card-subtitle {	
+	    bottom: 0;
+	   	font-size: 11px;
+	    @include media-breakpoint-up(sm) {
+	    	 font-size: 14px;
+	    	 bottom: 2%;
+		}
+	}
+	.text-lockup {
+		padding: 100px 10%;
+    	padding-bottom: 43px;
+    	@include media-breakpoint-up(sm) {
+    		padding: 0;
+	    	padding-left: 40px;
+		}
+	}
+	.image-lockup {
+		height: 250px;
+    	margin: auto;
+    	width: 90%;
+		@include media-breakpoint-up(sm) {
+		    height: 90%;
+		    margin-left: 13px !important;
+		}
+		.image-container {
+		    position: absolute;
+			left: 0;
+			width: 100%;
+			height: 89%;
+			background-size: cover;
+			background-position: center;
+		}
+	}
+	.wave {
+		&-top {
+			top: 0;
+			right: 0;
+			width: 70vw;
+		}
+		&-bottom {
+			bottom: 0;
+			width: 60vw;
+			z-index: 1000;
+		}
+	}
 }
+
