abstract banner into react-style component

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/banner' %>
+<%= render 'shared/banner', title: "Detailed Message", button: { label: "Button 1", path: "#" }, image: "h_img_artist.png", subtitle: "for-artists" %>
 <%= render 'shared/line_intro' %>
 
 <div class="form-set">
