--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
-<%= render 'shared/banner', title: "Detailed Message", button: { label: "Button 1", path: "#" }, image: "h_img_artist.png", subtitle: "for-artists" %>
+<%= render 'shared/banner_carousel_wrapper' do %>
+  <%= render 'shared/banner_carousel_content', title: "Detailed Message", button: { label: "Button 1", path: "#" }, image: "h_img_artist.png", subtitle: "for-artists" %>
+<% end %>
 <%= render 'shared/line_intro' %>
 
 <div class="form-set">
