--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,18 +1,18 @@
 .wrapper-banner {
-	background: $beige;
+	@extend .bg-beige;
 	.banner-content{
 		@include make-container;
+    @extend .p-0;
 		@include media-breakpoint-up(sm) {
-			width: calc(100vw - 2 * #{$header-height});
-			margin: 0 auto;
-		}
+      width: calc(100vw - 2 * #{$header-height});
+      margin: 0 auto;
+    }
 	}
 	.inner-banner {
 		height: 100vh;
 		@include media-breakpoint-up(sm) {
 		    height: 80vh;
 		}
-
 	}
 	.banner-card-subtitle {	
 	    bottom: 0;
@@ -59,5 +59,26 @@
 			z-index: 1000;
 		}
 	}
+  
+  // Banner Carousel
+  .flickity-slider{
+    .is-selected{
+      margin-left: $header-height; // Fixes offset issue
+    }
+  }
+  .flickity-page-dots{
+    bottom: 10px;
+    right: 10px;
+    text-align: right;
+    .dot{
+      border-radius: $border-radius;
+      opacity: 1;
+      @extend .bg-blue;
+      @extend .border-blue-thick;
+      &.is-selected{
+        @extend .bg-white;
+      }
+    }
+  }
 }
 
