--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,7 @@
 <%= render 'shared/banner_carousel_wrapper' do %>
-  <%= render 'shared/banner_carousel_content', title: "Detailed Message", button: { label: "Button 1", path: "#" }, image: "h_img_artist.png", subtitle: "for-artists" %>
+  <%= render 'shared/banner_carousel_content', title: "Detailed Message", header: "Header Text", button: { label: "Button 1", path: "#" }, image: "h_img_artist.png", subtitle: "for-artists" %>
+  <%= render 'shared/banner_carousel_content', title: "Detailed Message", header: "Header Text", button: { label: "Button 1", path: "#" }, image: "h_img_artist.png", subtitle: "for-artists" %>
+  <%= render 'shared/banner_carousel_content', title: "Detailed Message", header: "Header Text", button: { label: "Button 1", path: "#" }, image: "h_img_artist.png", subtitle: "for-artists" %>
 <% end %>
 <%= render 'shared/line_intro' %>
 
@@ -7,3 +9,4 @@
   <%= render 'contact_forms/new' %>
 </div>
 
+<%= javascript_pack_tag 'banner_carousel' %>
