--- a/app/views/shared/_banner_carousel_wrapper.html.erb
+++ b/app/views/shared/_banner_carousel_wrapper.html.erb
@@ -1,11 +1,6 @@
 <div class="wrapper-banner">	
-	<div class="banner-content bg-blue-gradient">
-	 	<div class="row">
-	 		<div class="inner-banner w-100 position-relative d-sm-flex align-items-center">
-	 			<%= image_tag "top_wave.svg", class: "wave-top position-absolute" %>
-	 			<%= image_tag "bottom_wave.svg", class: "wave-bottom position-absolute" %>
-        <%= yield %>
-	 		</div>
+	<div class="banner-content banner-carousel bg-blue-gradient">
+      <%= yield %>
 		</div>
 	</div>
 </div> 
