--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -80,5 +80,19 @@
       }
     }
   }
+  .flickity-page-dots{
+    bottom: 10px;
+    right: 10px;
+    text-align: right;
+    .dot{
+      border-radius: $border-radius;
+      opacity: 1;
+      @extend .bg-blue;
+      @extend .border-blue-thick;
+      &.is-selected{
+        @extend .bg-white;
+      }
+    }
+  }
 }
 
