--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
 <%= render 'shared/banner' %>
 <%= render 'shared/line_intro' %>
+<%= render 'shared/cards' %>
 
 <div class="form-set">
   <%= render 'contact_forms/new' %>
