--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -7,6 +7,7 @@
 	 			<div class="text-lockup col-12 col-sm-6">
 					<h1 class="title">Detailed Message</h1>
 					<h1 class="color c-white">Headers and Large Message</h1>
+					<p>As an Agency we will assist artists to accelerate their career, as a digital platform, we will provide a tool for galleries to connect and facilitate their workflow and as an advisor, we will turn the new collectors into wise tastemakers.</p>
 				    <a href="#" class="button-primary">Button 1</a>
 				</div>
 				<div class="shadow sb-light background bg-dark-blue image-lockup col-12 col-sm-6">
