--- a/app/views/shared/_line_intro.html.erb
+++ b/app/views/shared/_line_intro.html.erb
@@ -1,18 +1,14 @@
 <div class="line-wrapper">
 	<div class="container">
 		<div class="row">
-			<div class="col-12 col-sm-6 d-flex line-left">
-				<h1 class="title">Artyque is a</h1>
-				<hr class="lines w-50">
-			</div>
-			<div class="col-12 col-sm-6 d-flex line-right">
-				<hr class="lines w-50">
-				<h1 class="text-right title">Community</h1>
+			<div class="col d-flex line-left">
+				<h1 class="title">Artyque is</h1>
+				<hr class="lines w-75">
 			</div>
 		</div>
 	</div>
-</div>
 <div class="ellipse"></div>
+</div>
 
 
 
