--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -12,6 +12,8 @@
 		height: 100vh;
 		@include media-breakpoint-up(sm) {
 		    height: 80vh;
+        padding: 24px;
+        padding-right: 50px;
 		}
 	}
 	.banner-card-subtitle {	
@@ -40,10 +42,9 @@
     	width: 90%;
 		@include media-breakpoint-up(sm) {
 		    height: 90%;
-		    margin-left: 13px !important;
 		}
 		.image-container {
-		    position: absolute;
+		  position: absolute;
 			left: 0;
 			width: 100%;
 			height: 89%;
