--- a/app/views/shared/_banner_carousel_content.html.erb
+++ b/app/views/shared/_banner_carousel_content.html.erb
@@ -1,8 +1,6 @@
 <div class="banner-carousel-cell w-100 m-0 p-0">
   <div class="row">
-    <div class="inner-banner w-100 position-relative d-sm-flex align-items-center">
-      <%= image_tag "top_wave.svg", class: "wave-top position-absolute" %>
-      <%= image_tag "bottom_wave.svg", class: "wave-bottom position-absolute" %>
+    <div class="col inner-banner w-100 position-relative d-sm-flex align-items-center">
       <div class="text-lockup col-12 col-sm-6">
         <h1 class="title"><%= title %></h1>
         <h1 class="color c-white"><%= header %></h1>
