--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <%= render 'shared/banner_carousel_wrapper' do %>
-  <%= render 'shared/banner_carousel_content', title: "Detailed Message", header: "Header Text", button: { label: "Button 1", path: "#" }, image: "h_img_artist.png", subtitle: "for-artists" %>
-  <%= render 'shared/banner_carousel_content', title: "Detailed Message", header: "Header Text", button: { label: "Button 1", path: "#" }, image: "h_img_artist.png", subtitle: "for-artists" %>
-  <%= render 'shared/banner_carousel_content', title: "Detailed Message", header: "Header Text", button: { label: "Button 1", path: "#" }, image: "h_img_artist.png", subtitle: "for-artists" %>
+  <%= render 'shared/banner_carousel_content', title: "coming fall 2019", header: "Welcome to Artyque ", text: "The digital agency and platform aiming to create a European network for Emerging artists, galleries and collectors to collaborate and grow together.", button: { label: "Learn More", path: "#" }, image: "h_img_artist.png", subtitle: "for-artists" %>
+  <%= render 'shared/banner_carousel_content', title: "Detailed Message", header: "Header Text", text: "The digital agency and platform aiming to create a European network for Emerging artists, galleries and collectors to collaborate and grow together.", button: { label: "Button 1", path: "#" }, image: "h_img_artist.png", subtitle: "for-artists" %>
+  <%= render 'shared/banner_carousel_content', title: "Detailed Message", header: "Header Text", text: "The digital agency and platform aiming to create a European network for Emerging artists, galleries and collectors to collaborate and grow together.", button: { label: "Button 1", path: "#" }, image: "h_img_artist.png", subtitle: "for-artists" %>
 <% end %>
 <%= render 'shared/line_intro' %>
 <%= render 'shared/cards' %>
