--- a/app/views/shared/_banner_carousel_content.html.erb
+++ b/app/views/shared/_banner_carousel_content.html.erb
@@ -1,12 +1,13 @@
 <div class="banner-carousel-cell w-100 m-0 p-0">
   <div class="row">
     <div class="col inner-banner w-100 position-relative d-sm-flex align-items-center">
-      <div class="text-lockup col-12 col-sm-6">
+      <div class="text-lockup col-12 col-md-6">
         <h1 class="title"><%= title %></h1>
         <h1 class="color c-white"><%= header %></h1>
+        <p><%= text %></p>
         <%= link_to button[:label], button[:path], class: "button-primary" %>
       </div>
-      <div class="shadow sb-light background bg-dark-blue image-lockup col-12 col-sm-6">
+      <div class="shadow sb-light background bg-dark-blue image-lockup col-12 col-md-6">
         <div class="image-container background bg-blue" style="background-image: url(<%= image_path image %>);"></div>
         <h1 class="banner-card-subtitle w-100 text-center position-absolute color c-white title"><%= subtitle %></h1>
       </div>
