--- a/app/views/shared/_cards.html.erb
+++ b/app/views/shared/_cards.html.erb
@@ -5,7 +5,7 @@
 				<div class="d-flex">
 					<div class="text-cards">
 						<h1 class="title">An Agency</h1>
-			      		<h1>For Artists</h1>
+			      		<h2 class="color c-blue">For Artists</h2>
 			      		<p class="mw-50">Artyque for Artists is a new kind of service</p>
 		      		</div>
 		      		<img src="https://via.placeholder.com/150" style="width: 160px;">
@@ -17,7 +17,7 @@
 				<img src="https://via.placeholder.com/150" style="width: 100%;">
 				<div class="text-cards">
 					<h1 class="color c-white title">A Solution</h1>
-		      		<h1 class="color c-white">For Galleries</h1>
+		      		<h2 class="color c-white">For Galleries</h2>
 		      		<p>a new kind of service that simplifies the way you look for Artists and organize your shows. </p>	
 	      		</div>
 			</div>
@@ -26,7 +26,7 @@
 			<div class="backround bg-white shadow sb-light card card-collectors">
 				<div class="text-cards">
 					<h1 class="title">An Advisor</h1>
-		      		<h1>For Collectors</h1>
+		      		<h2 class="color c-blue">For Collectors</h2>
 		      		<p>Have access to over 100 artists’ portfolios.</p>
 	      		</div>
 			</div>
