Added about section

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,7 @@
 <% end %>
 <%= render 'shared/line_intro' %>
 <%= render 'shared/cards' %>
+<%= render 'shared/about_section' %>
 
 <div class="form-set">
   <%= render 'contact_forms/new' %>
