--- a/app/views/contact_forms/_new.html.erb
+++ b/app/views/contact_forms/_new.html.erb
@@ -1,3 +1,5 @@
+<h2 class="color c-blue text-center">Get in touch</h2>
+<br>
 <%= simple_form_for @contact_form do |f| %>
   <%= f.input :role, as: :select, :required => true, label: false, collection: {
     "Artist" => 'artist',
