--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -66,6 +66,9 @@
 	}
   
   // Banner Carousel
+  .flickity-viewport{
+    margin-right: calc(-1 * #{$header-height}) !important; // Makes image overhang on the right
+  }
   .flickity-slider{
     .banner-carousel-cell{
       transition: all 100ms ease-out;
@@ -73,6 +76,7 @@
     .is-selected{
       @include media-breakpoint-up(sm) {
         transform: translateX(#{$header-height}); // Attempt solution of responsiveness/positioning bug TODO can be improved
+        margin-left: calc(-1/2 * #{$header-height}) !important;
       }
     }
     .wave-top{
