--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -12,8 +12,7 @@
 		height: 100vh;
 		@include media-breakpoint-up(sm) {
 		    height: 80vh;
-        padding: 24px;
-        padding-right: 50px;
+       padding-left: 50px;
 		}
 	}
 	.banner-card-subtitle {	
