--- a/app/views/shared/_cards.html.erb
+++ b/app/views/shared/_cards.html.erb
@@ -8,13 +8,13 @@
 			      		<h2 class="color c-blue">For Artists</h2>
 			      		<p class="mw-50">Artyque for Artists is a new kind of service</p>
 		      		</div>
-		      		<img src="https://via.placeholder.com/150" style="width: 160px;">
+		      		<%= image_tag "pic-1.png" %>
 				</div>
 			</div>
 		</div>
 		<div class="col-12 col-sm-6">
 			<div class="backround bg-blue shadow sb-light card card-galleries">
-				<img src="https://via.placeholder.com/150" style="width: 100%;">
+				<%= image_tag "pic-2.png", style: "width: 100%" %>
 				<div class="text-cards">
 					<h1 class="color c-white title">A Solution</h1>
 		      		<h2 class="color c-white">For Galleries</h2>
