--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -21,6 +21,7 @@
 		z-index: 0;
 	     @include media-breakpoint-up(sm) {
 	   		margin-top: -60px;
+	   		min-width: 330px;
 		}
 	}
 	&-collectors {
