--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <%= render 'shared/banner_carousel_wrapper' do %>
-  <%= render 'shared/banner_carousel_content', title: "coming fall 2019", header: "Welcome to Artyque ", text: "The digital agency and platform aiming to create a European network for Emerging artists, galleries and collectors to collaborate and grow together.", button: { label: "Learn More", path: "#" }, image: "h_img_artist.png", subtitle: "for-artists" %>
-  <%= render 'shared/banner_carousel_content', title: "Detailed Message", header: "Header Text", text: "The digital agency and platform aiming to create a European network for Emerging artists, galleries and collectors to collaborate and grow together.", button: { label: "Button 1", path: "#" }, image: "h_img_artist.png", subtitle: "for-artists" %>
-  <%= render 'shared/banner_carousel_content', title: "Detailed Message", header: "Header Text", text: "The digital agency and platform aiming to create a European network for Emerging artists, galleries and collectors to collaborate and grow together.", button: { label: "Button 1", path: "#" }, image: "h_img_artist.png", subtitle: "for-artists" %>
+  <%= render 'shared/banner_carousel_content', title: "coming fall 2019", header: "Welcome to Artyque ", text: "The digital agency and platform aiming to create a European network for Emerging artists, galleries and collectors to collaborate and grow together.", button: { label: "Learn More", path: "#" }, image: "h_img_artist.png", subtitle: "for artists" %>
+  <%= render 'shared/banner_carousel_content', title: "coming fall 2019", header: "Support, Growth, Opportunities", text: "We assist artists, provide tools for galleries, and turn the new collectors into wise tastemakers.", button: { label: "Learn More", path: "#" }, image: "h_img_gallery.png", subtitle: "for galleries" %>
+  <%= render 'shared/banner_carousel_content', title: "coming fall 2019", header: "Your art consultant", text: "Artyque is like having a personal assistant, but better.", button: { label: "Button 1", path: "#" }, image: "h_img_collector.png", subtitle: "for galleries" %>
 <% end %>
 <%= render 'shared/line_intro' %>
 <%= render 'shared/cards' %>
