add disable drag class

--- a/app/assets/stylesheets/design_toolbox/_scroll.scss
+++ b/app/assets/stylesheets/design_toolbox/_scroll.scss
@@ -4,3 +4,9 @@
   min-height: 0 !important;
   overflow: hidden;
 }
+
+.drag-disable{
+  user-drag: none;
+  user-select: none;
+  pointer-events: none;
+}
