--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,8 @@
 <% end %>
 <%= render 'shared/line_intro' %>
 <%= render 'shared/cards' %>
+<%= render 'shared/carousel_wrapper', laptop: true, height: '350px' do %>
+<% end %>
 <%= render 'shared/about_section' %>
 
 <div class="form-set">
