Added names to about section

--- a/app/views/shared/_about_section.html.erb
+++ b/app/views/shared/_about_section.html.erb
@@ -2,23 +2,37 @@
 	<div class="about-section container">
 		<h1 class="title t-about text-center">Who we are</h1>
 		<div class="row">
-			<div class="person-lockup col-12 col-sm-6 d-flex align-items-end justify-content-center">
-				<div class="icons-lockup">
-					<ul>
-						<li class="background bg-blue"><i class="fab fa-linkedin"></i></li>
-						<li class="background bg-pink"><i class="fab fa-instagram"></i></li>
-					</ul>
+			<div class="person-lockup col-12 col-sm-6">
+				<div class="d-flex align-items-end justify-content-center">
+					<div class="icons-lockup">
+						<ul>
+							<li class="background bg-blue"><i class="fab fa-linkedin"></i></li>
+							<li class="background bg-pink"><i class="fab fa-instagram"></i></li>
+						</ul>
+					</div>
+					<div class="text-center image-container"><%= image_tag "mattia.png" %></div>
 				</div>
-				<div class="text-center image-container"><%= image_tag "ksenia.png" %></div>
+				<br>
+				<div class="name-lockup col">
+					<h2 class="color c-blue">Mattia Cremiux</h2>
+					<h1 class="title">CEO & Co-Founder</h1>
+				</div>
 			</div>
-			<div class="person-lockup col-12 col-sm-6 d-flex align-items-end justify-content-center">
-				<div class="icons-lockup">
-					<ul>
-						<li class="background bg-blue"><i class="fab fa-linkedin"></i></li>
-						<li class="background bg-pink"><i class="fab fa-instagram"></i></li>
-					</ul>
+			<div class="person-lockup col-12 col-sm-6">
+				<div class="d-flex align-items-end justify-content-center">
+					<div class="icons-lockup">
+						<ul>
+							<li class="background bg-blue"><i class="fab fa-linkedin"></i></li>
+							<li class="background bg-pink"><i class="fab fa-instagram"></i></li>
+						</ul>
+					</div>
+					<div class="text-center image-container"><%= image_tag "ksenia.png" %></div>
 				</div>
-				<div class="text-center image-container"><%= image_tag "mattia.png" %></div>
+				<br>
+				<div class="name-lockup col">
+					<h2 class="color c-blue">Ksenia Stepanova</h2>
+					<h1 class="title">Creative Director & Co-Founder</h1>
+				</div>
 			</div>
 			<div class="text col">
 				<h1 class="title">Our Philosophy</h1>
