--- a/app/assets/stylesheets/components/_about_section.scss
+++ b/app/assets/stylesheets/components/_about_section.scss
@@ -8,6 +8,11 @@
 	}
 	.person-lockup {
 		margin-bottom: 45px;
+		.name-lockup {
+			h1 {
+				font-size: 10px;
+			}
+		}
 	}
 	.icons-lockup {
 		ul {
