--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -1,12 +1,20 @@
 .carousel-wrapper{
   .carousel-overlay{
     z-index: $zindex-tooltip;
+    @include media-breakpoint-down(sm) {
+      width: 100vw;
+      height: auto;
+    }
   }
   .carousel{
     .carousel-cell{
       opacity: 0.5;
       transition: all 150ms ease-in;
       z-index: 1;
+      @include media-breakpoint-down(sm) {
+        width: calc(100vw - 70px);
+        height: auto;
+      }
       &.is-selected{
         opacity: 1;
       }
