--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -1,8 +1,12 @@
 .carousel-wrapper{
+  @include media-breakpoint-down(sm) {
+    overflow: hidden;
+    justify-content: right;
+  }
   .carousel-overlay{
     z-index: $zindex-tooltip;
     @include media-breakpoint-down(sm) {
-      width: 100vw;
+      width: 120vw;
       height: auto;
     }
   }
@@ -12,8 +16,11 @@
       transition: all 150ms ease-in;
       z-index: 1;
       @include media-breakpoint-down(sm) {
-        width: calc(100vw - 70px);
+        width: calc(120vw - 70px);
         height: auto;
+        &.is-selected{
+          margin-left: 15vw;
+        }
       }
       &.is-selected{
         opacity: 1;
