--- a/app/views/contact_forms/_new.html.erb
+++ b/app/views/contact_forms/_new.html.erb
@@ -1,11 +1,11 @@
 <h2 class="color c-blue text-center">Get in touch</h2>
 <br>
-<%= simple_form_for @contact_form do |f| %>
+<%= simple_form_for @contact_form, remote: true do |f| %>
   <%= f.input :role, as: :select, :required => true, label: false, collection: {
-    "Artist" => 'artist',
-    "Gallery" => 'gallery',
-    "Collector" => 'collector'
-  }, prompt: "I am a..." %>
+    "An Artist" => 'artist',
+    "A Gallery" => 'gallery',
+    "A Collector" => 'collector'
+  }, prompt: "I am..." %>
   <%= f.input :name, :required => true, label: false, placeholder: "Name" %>
   <%= f.input :email, :required => true, label: false, placeholder: "Email" %>
   <%= f.input :message, :as => :text, :required => false, label: false, placeholder: "Message (optional)" %>
