small fixes to ajax

--- a/app/views/contact_forms/create.js.erb
+++ b/app/views/contact_forms/create.js.erb
@@ -1,5 +1,5 @@
 function refreshForm(innerHTML) {
-  const contactForm = document.getElementById('new_contact_form');
+  const contactForm = document.getElementById('new-contact-form');
   contactForm.innerHTML = innerHTML;
 }
 
