--- a/app/views/contact_forms/_success.html.erb
+++ b/app/views/contact_forms/_success.html.erb
@@ -1,2 +1,4 @@
-<h3 class="text-center">Thank Your For Your Message</h3>
-<p>It's a pleasure hearing from you, and we will be in touch promptly about your inquiry.</p>
+<div id="new-contact-form">
+  <h2 class="color c-blue text-center">Thank You for Your Message!</h2>
+  <p>It's a pleasure hearing from you, and we will be in touch promptly about your inquiry.</p>
+</div>
