--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,11 +5,17 @@
 <% end %>
 <%= render 'shared/line_intro' %>
 <%= render 'shared/cards' %>
+
+<div class="break-4"></div>
+
 <%= render 'shared/carousel', laptop: true, height: 350, images: %w[
   screen_a.png
   screen_b.png
   screen_c.png
 ] %>
+
+<div class="break-4"></div>
+
 <%= render 'shared/about_section' %>
 
 <div class="form-set">
