--- a/app/views/shared/_about_section.html.erb
+++ b/app/views/shared/_about_section.html.erb
@@ -7,7 +7,6 @@
 					<div class="icons-lockup">
 						<ul>
 							<li class="background bg-blue"><i class="fab fa-linkedin"></i></li>
-							<li class="background bg-pink"><i class="fab fa-instagram"></i></li>
 						</ul>
 					</div>
 					<div class="text-center image-container"><%= image_tag "mattia.png" %></div>
@@ -22,8 +21,8 @@
 				<div class="d-flex align-items-end justify-content-center">
 					<div class="icons-lockup">
 						<ul>
-							<li class="background bg-blue"><i class="fab fa-linkedin"></i></li>
 							<li class="background bg-pink"><i class="fab fa-instagram"></i></li>
+							<li class="background bg-blue"><i class="fab fa-linkedin"></i></li>
 						</ul>
 					</div>
 					<div class="text-center image-container"><%= image_tag "ksenia.png" %></div>
@@ -38,7 +37,7 @@
 				<h1 class="title">Our Philosophy</h1>
 				<h2 class="color c-blue">Competition is outdated</h2>
 				<br>
-				<p>To respond to the biggest challenges our society is facing today, we believe that collaboration and altruism need to be the foundation of everything we do. By building this platform and community, we want to give the option of a different approach to the actors of the Art industry, for them to work and grow together in a fair and innovative way. We are building Artyque with all the necessary business acumen but also with all the possible creativity and sensitivity in order to be able to ally collective effort, common good and strategic growth for each one of our members. </p>
+				<p class="color c-dark-blue">To respond to the biggest challenges our society is facing today, we believe that collaboration and altruism need to be the foundation of everything we do. By building this platform and community, we want to give the option of a different approach to the actors of the Art industry, for them to work and grow together in a fair and innovative way. We are building Artyque with all the necessary business acumen but also with all the possible creativity and sensitivity in order to be able to ally collective effort, common good and strategic growth for each one of our members. </p>
 			</div>
 		</div>
 	</div>
