--- a/app/views/shared/_banner_carousel_content.html.erb
+++ b/app/views/shared/_banner_carousel_content.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col inner-banner w-100 position-relative d-sm-flex align-items-center">
       <div class="text-lockup col-12 col-md-6">
-        <h1 class="title"><%= title %></h1>
+        <h1 class="title color c-beige"><%= title %></h1>
         <h1 class="color c-white"><%= header %></h1>
         <p><%= text %></p>
         <%= link_to button[:label], button[:path], class: "button-primary" %>
