--- a/app/views/shared/_cards.html.erb
+++ b/app/views/shared/_cards.html.erb
@@ -18,7 +18,7 @@
 				<div class="text-cards">
 					<h1 class="color c-white title">A Solution</h1>
       		<h2 class="color c-white">For Galleries</h2>
-      		<p>a new kind of service that simplifies the way you look for Artists and organize your shows. </p>
+      		<p>Better than a personal assistant. </p>
 	      </div>
 			</div>
 		</div>
@@ -27,7 +27,7 @@
 				<div class="text-cards">
 					<h1 class="title">An Advisor</h1>
       		<h2 class="color c-blue">For Collectors</h2>
-      		<p>Have access to over 100 artists’ portfolios.</p>
+      		<p>Invest like never before.</p>
 	      </div>
 			</div>
 		</div>
